Projectile misinterpreted as player bug fix